Scenario CONTAINS gameCreationTimes
Ratehr than CONTAINS games.